--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webpack",
   "version": "1.0.0",
   "description": "",
-  "homepage": "https://Alekhandro24.github.io/webpack-template/",
+  "homepage": "https://Alekhandro24.github.io/filmpire-app/",
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
